[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r7-cli"
version = "0.1.0"
description = "unofficial CLI for interfacing with Rapid7 platforms"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "joshhighet"}
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "keyring>=25.0.0",
    "rich>=13.0.0",
    "diskcache>=5.6.0",
    "r7-surcom-sdk>=0.1.4",
]

[project.scripts]
r7 = "r7:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["api", "commands", "utils", "examples", "examples.asm"]
py-modules = ["r7"]

[tool.setuptools.package-data]
"examples.asm" = ["*.cypher"]
"*" = ["*.md"]